--- a/Themes/default/skins/index.ie7.css
+++ b/Themes/default/skins/index.ie7.css
@@ -217,4 +217,4 @@ dl.settings dd
 	text-indent: 0
 
 .two-columns
-	width: 48.5%
+	width: 45%
